<resources>
    <string name="google_maps_API_key">AIzaSyBoR8pp8rm_GwcT87Q443nmYxxXfcUr79I</string>
    <string name="app_name">Parking Application</string>

    <!-- Titles -->
    <string name="title_settings">Settings</string>
    <string name="title_activity_map">Map Activity</string>
    <string name="title_find_car">Find Car</string>
    <!-- Button Text -->

    <string name="btn_find_parking">Find Parking</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_save">Save</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_found_car">Car Found</string>
    <string name="btn_find_car">Find Car</string>


    <!-- Settings Activity -->
    <string name="select">Select</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="seek_proximity">Seek Proximity</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="auto_select_feature">Auto Select Feature</string>

    <!-- Map Activity -->
    <string name="search_hint">Enter address, City or Postal Code</string>
</resources>
