<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/findParking"
            android:layout_width="155dp"
            android:layout_height="60dp"
            android:text="@string/btn_find_parking" />

        <Button
            android:id="@+id/settings"
            android:layout_width="155dp"
            android:layout_height="60dp"
            android:text="@string/btn_settings"
            android:gravity="center"
            />
    </LinearLayout>


</LinearLayout>